# backers

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: celery.py  settings.py  urls.py
data/: data_posts.json  data_users.json
posts/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_initial.py  0003_alter_post_pub_date.py
posts/templates/posts/: base.html  post_confirm_delete.html  post_detail.html  post_form.html  post_list.html  user_posts.html
posts/templates/posts/includes/: inc_main_menu.html
users/: forms.py  models.py  tasks.py  tests.py  urls.py  utils.py  views.py
users/management/commands/: cmu.py  csu.py  cuu.py
users/migrations/: 0001_initial.py  0002_user_nickname_alter_user_phone.py  0003_alter_user_nickname.py  0004_alter_user_token.py
users/templates/users/: confirm_phone.html  login.html  new_token.html  payment_cancel.html  payment_success.html  payment_vip.html  register.html  user_delete.html  user_form.html  user_list.html  users_list.html
